[package]
name = "kinematics-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nalgebra = "0.31.1"
urdf-rs = "0.6.5"
simba = "0.7.2"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "example"
path = "src/example.rs"

[[bench]]
name = "fk"
harness = false
